RemoveTransferFiles